--- a/src/app/modules/app-menus/pages/menu-details/menu-details.component.html
+++ b/src/app/modules/app-menus/pages/menu-details/menu-details.component.html
@@ -1,6 +1,6 @@
 <div class="box">
-    <div class="content" style="margin: -15px;">
-        <div class="heading" style="margin: 0px 15px;">
+  <div class="content" style="margin: -15px;">
+    <!-- <div class="heading" style="margin: 0px 15px;">
             <div class="columns is-mobile is-centered">
                 <div class="column">
                     <p class="subtitle">
@@ -8,202 +8,214 @@
                             <span class="icon is-small">
                                 <fa-icon icon="angle-left"></fa-icon> 
                             </span> <span>Menu list</span>
-                        </a>
-                        <!-- <span>Title</span>                                     -->
+                        </a>                                                    
                     </p>
                 </div>
                 <div class="column has-text-right ">
                     <a class="button is-rounded is-small">Save Menu item</a>
                 </div>
             </div>
-        </div>
+        </div> -->
 
-        <div class="box">
-            <div class="content">
-                <div class="columns">
-                    <div class="column is-one-third">
+    <div class="box">
+      <div class="content">
+        <div class="columns">
+          <div class="column is-one-third">
 
-                        <h3 style="text-align: center">Nimbu Pani</h3>
+            <h3 style="text-align: center">Nimbu Pani</h3>
 
-                        <div class="columns is-mobile is-centered">
-                            <div class="column">
-                                <a class="button is-small is-rounded">
-                                    <span class="icon is-small">                                        
-                                        <fa-icon icon="angle-left"></fa-icon> 
-                                    </span>
-                                </a>
-                            </div>
-                            <div class="column is-two-thirds">
-                                <img src="../../../../../assets/images/nimbu_pani.jpg" alt="Menu Image">
+            <div class="columns is-mobile is-centered">
+              <div class="column">
+                <a class="button is-small is-rounded">
+                  <span class="icon is-small">
+                    <fa-icon icon="angle-left"></fa-icon>
+                  </span>
+                </a>
+              </div>
+              <div class="column is-two-thirds">
+                <img src="../../../../../assets/images/nimbu_pani.jpg" alt="Menu Image">
 
-                            </div>
-                            <div class="column">
-                                <a class="button is-small is-rounded">
-                                    <span class="icon is-small">                                        
-                                        <fa-icon icon="angle-right"></fa-icon> 
-                                    </span>
-                                </a>
-                            </div>
-
-                        </div>
-
-                        <aside class="menu">
-                            <span class="menu-label">
-                                Type
-                            </span>
-                            <ul class="menu-list">
-                                <li><a class="columns is-mobile">
-                                        <span class="column">Menu Type</span>
-                                        <span class="column has-text-right">Snacks</span>
-                                    </a></li>
-                            </ul>
-
-                            <div class="menu-label columns is-mobile">
-                                <span class="column">Price</span>
-                                <span class="column has-text-right">Rs 40</span>
-                            </div>
-                            <ul class="menu-list">
-                                <li><a class="columns is-mobile">
-                                        <span class="column">Wastage (%)</span>
-                                        <span class="column has-text-right">25%</span>
-                                    </a></li>
-                                <li><a class="columns is-mobile">
-                                        <span class="column">Ingredient Cost</span>
-                                        <span class="column has-text-right">Rs 10</span>
-                                    </a></li>
-                                <li><a class="columns is-mobile">
-                                        <span class="column">Preparation Cost</span>
-                                        <span class="column has-text-right">Rs 8</span>
-                                    </a></li>
-                            </ul>
-
-                            <div class="menu-label">
-                                <span>Time</span>
-                            </div>
-                            <ul class="menu-list">
-                                <li><a class="columns is-mobile">
-                                        <p class="column">Preparation Time</p>
-                                        <p class="column has-text-right">15 min</p>
-                                    </a></li>
-                            </ul>
-
-                            <div class="menu-label">
-                                <span>Packaging</span>
-                            </div>
-                            <ul class="menu-list">
-                                <li><a class="columns is-mobile">
-                                        <span class="column">Packaging Cost</span>
-                                        <span class="column has-text-right">Rs 5</span>
-                                    </a></li>
-                                <li><a class="columns is-mobile">
-                                        <span class="column">Packaging Time</span>
-                                        <span class="column has-text-right">15 min</span>
-                                    </a></li>
-                            </ul>
-
-                            <div class="menu-label">
-                                <span>Quantity</span>
-                            </div>
-                            <ul class="menu-list">
-                                <li><a class="columns is-mobile">
-                                        <span class="column">Available Quantity</span>
-                                        <span class="column has-text-right">5</span>
-                                    </a></li>
-                                <li><a class="columns is-mobile">
-                                        <span class="column">Max Quantity</span>
-                                        <span class="column has-text-right">15</span>
-                                    </a></li>
-                            </ul>
-
-                        </aside>
-
-
-
-                    </div>
-                    <div class="column">
-
-                        <div class="columns">
-                            <div class="column is-three-fifths">
-                                <div class="field">
-                                    <p class="control has-icons-left">
-                                        <input class="input is-small is-rounded" type="password"
-                                            placeholder="Ingredient">
-                                        <span class="icon is-small is-left">
-                                            <fa-icon icon="search"></fa-icon> 
-                                        </span>
-                                    </p>
-                                </div>
-                            </div>
-                            <div class="column">
-                                <a class="button is-small is-rounded">
-                                    Add Ingredient
-                                </a>
-                            </div>
-                        </div>
-
-
-
-                        <table class="table is-hoverable is-fullwidth">
-                            <thead>
-                                <tr>
-                                    <th>Menu Item</th>
-                                    <th>Rate</th>
-                                    <th>Quantity</th>
-                                    <th>Price</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td>Tea Powder</td>
-                                    <td>12</td>
-                                    <td>2</td>
-                                    <td>24</td>
-                                </tr>
-                                <tr>
-                                    <td>Tripple Schezwan manchurian rice</td>
-                                    <td>40</td>
-                                    <td>1</td>
-                                    <td>40</td>
-                                </tr>
-                                <tr>
-                                    <td>Tea Powder</td>
-                                    <td>12</td>
-                                    <td>2</td>
-                                    <td>24</td>
-                                </tr>
-                                <tr>
-                                    <td>Tea Powder</td>
-                                    <td>12</td>
-                                    <td>2</td>
-                                    <td>24</td>
-                                </tr>
-                                <tr>
-                                    <td>Tea Powder</td>
-                                    <td>12</td>
-                                    <td>2</td>
-                                    <td>24</td>
-                                </tr>
-
-                            </tbody>
-                        </table>
-
-                        <nav class="pagination is-rounded is-small" role="navigation"
-                            aria-label="pagination">
-                            <a class="pagination-previous">Previous</a>
-                            <a class="pagination-next">Next page</a>
-                            <ul class="pagination-list" style="margin-top:-.5rem;">
-                                <li><a class="pagination-link" aria-label="Goto page 1">1</a></li>
-                                <li><span class="pagination-ellipsis">&hellip;</span></li>
-                                <li><a class="pagination-link is-current" aria-label="Page 46"
-                                        aria-current="page">4</a></li>
-                            </ul>
-                        </nav>
-
-                    </div>
-                </div>
+              </div>
+              <div class="column">
+                <a class="button is-small is-rounded">
+                  <span class="icon is-small">
+                    <fa-icon icon="angle-right"></fa-icon>
+                  </span>
+                </a>
+              </div>
 
             </div>
+
+            <aside class="menu">
+              <span class="menu-label">
+                Type
+              </span>
+              <ul class="menu-list">
+                <li><a class="columns is-mobile">
+                    <span class="column">Menu Type</span>
+                    <span class="column has-text-right">Snacks</span>
+                  </a></li>
+              </ul>
+
+              <div class="menu-label columns is-mobile">
+                <span class="column">Price</span>
+                <span class="column has-text-right">Rs 40</span>
+              </div>
+              <ul class="menu-list">
+                <li><a class="columns is-mobile">
+                    <span class="column">Wastage (%)</span>
+                    <span class="column has-text-right">25%</span>
+                  </a></li>
+                <li><a class="columns is-mobile">
+                    <span class="column">Ingredient Cost</span>
+                    <span class="column has-text-right">Rs 10</span>
+                  </a></li>
+                <li><a class="columns is-mobile">
+                    <span class="column">Preparation Cost</span>
+                    <span class="column has-text-right">Rs 8</span>
+                  </a></li>
+              </ul>
+
+              <div class="menu-label">
+                <span>Time</span>
+              </div>
+              <ul class="menu-list">
+                <li><a class="columns is-mobile">
+                    <p class="column">Preparation Time</p>
+                    <p class="column has-text-right">15 min</p>
+                  </a></li>
+              </ul>
+
+              <div class="menu-label">
+                <span>Packaging</span>
+              </div>
+              <ul class="menu-list">
+                <li><a class="columns is-mobile">
+                    <span class="column">Packaging Cost</span>
+                    <span class="column has-text-right">Rs 5</span>
+                  </a></li>
+                <li><a class="columns is-mobile">
+                    <span class="column">Packaging Time</span>
+                    <span class="column has-text-right">15 min</span>
+                  </a></li>
+              </ul>
+
+              <div class="menu-label">
+                <span>Quantity</span>
+              </div>
+              <ul class="menu-list">
+                <li><a class="columns is-mobile">
+                    <span class="column">Available Quantity</span>
+                    <span class="column has-text-right">5</span>
+                  </a></li>
+                <li><a class="columns is-mobile">
+                    <span class="column">Max Quantity</span>
+                    <span class="column has-text-right">15</span>
+                  </a></li>
+              </ul>
+
+            </aside>
+
+
+
+          </div>
+          <div class="column">
+
+            <div class="columns">
+              <div class="column">
+                <div class="field">
+                  <p class="control has-icons-left">
+                    <input class="input is-small is-rounded" type="text" placeholder="Ingredient">
+                    <span class="icon is-small is-left">
+                      <fa-icon icon="search"></fa-icon>
+                    </span>
+                  </p>
+                </div>
+              </div>
+              <div class="column is-narrow">
+                <a class="button is-small is-rounded" style="width:120px;"> 
+                  Add Ingredient
+                </a>
+              </div>
+            </div>
+
+            <!-- <div class="tabs">
+              <div class="field" style="margin-right: 10px;">
+                <p class="control has-icons-left">
+                  <input class="input is-rounded is-small" style="padding-left:2.5rem;" type="password"
+                    placeholder="From Date">
+                  <span class="icon is-small is-left">
+                    <fa-icon icon="calendar-alt"></fa-icon>
+                  </span>
+                </p>
+              </div>
+              <a class="button is-small is-rounded">
+                Add Ingredient
+              </a>
+            </div> -->
+
+
+
+
+            <table class="table is-hoverable is-fullwidth">
+              <thead>
+                <tr>
+                  <th>Menu Item</th>
+                  <th>Rate</th>
+                  <th>Quantity</th>
+                  <th>Price</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>Tea Powder</td>
+                  <td>12</td>
+                  <td>2</td>
+                  <td>24</td>
+                </tr>
+                <tr>
+                  <td>Tripple Schezwan manchurian rice</td>
+                  <td>40</td>
+                  <td>1</td>
+                  <td>40</td>
+                </tr>
+                <tr>
+                  <td>Tea Powder</td>
+                  <td>12</td>
+                  <td>2</td>
+                  <td>24</td>
+                </tr>
+                <tr>
+                  <td>Tea Powder</td>
+                  <td>12</td>
+                  <td>2</td>
+                  <td>24</td>
+                </tr>
+                <tr>
+                  <td>Tea Powder</td>
+                  <td>12</td>
+                  <td>2</td>
+                  <td>24</td>
+                </tr>
+
+              </tbody>
+            </table>
+
+            <nav class="pagination is-rounded is-small" role="navigation" aria-label="pagination">
+              <a class="pagination-previous">Previous</a>
+              <a class="pagination-next">Next page</a>
+              <ul class="pagination-list" style="margin-top:-.5rem;">
+                <li><a class="pagination-link" aria-label="Goto page 1">1</a></li>
+                <li><span class="pagination-ellipsis">&hellip;</span></li>
+                <li><a class="pagination-link is-current" aria-label="Page 46" aria-current="page">4</a></li>
+              </ul>
+            </nav>
+
+          </div>
         </div>
 
+      </div>
     </div>
+
+  </div>
 </div>
