--- a/src/app/modules/customers/pages/customer-profile/customer-profile.component.scss
+++ b/src/app/modules/customers/pages/customer-profile/customer-profile.component.scss
@@ -22,11 +22,10 @@
 }
 
 .card{
-    min-width:375px;
+    //in-width:375px;
     // cursor: pointer;
     border-radius: 6px;
     box-shadow:  0 2px 3px rgba(10, 10, 10, 0.1), 0 0 0px rgba(10, 10, 10, 0.1);
-    margin-bottom: 32px;
 }
 
 // .card:hover{
