--- a/src/app/layouts/master-layout/topnav/topnav.component.html
+++ b/src/app/layouts/master-layout/topnav/topnav.component.html
@@ -1,11 +1,11 @@
 <nav class="navbar is-fixed-top has-shadow" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
-    <!-- <a class="navbar-item" href="#">
-          <img src="Ico.jpg" width="112" height="40">
-      </a> -->
+    <a class="navbar-item" href="#">
+          <img src="../../../../assets/images/icon_blue.svg" width="75" height="25">
+      </a>
 
     <div class="navbar-item">
-      <h3 class="page-title">Dashboard</h3>
+      <h3 class="page-title">{{title}}</h3>
     </div>
 
     <a role="button" class="navbar-burger burger" [ngClass]="{'is-active': toggle}" (click)="toggle = !toggle"
@@ -21,9 +21,8 @@
       <div class="navbar-item">
         <nav class="breadcrumb has-arrow-separator" aria-label="breadcrumbs">
           <ul>
-            <li *ngFor="let breadcrumb of breadcrumbs">
-              <a [routerLink]="['/'+ breadcrumb.url]"
-              [ngClass]="{'is-active': breadcrumb.is_active}">
+            <li *ngFor="let breadcrumb of breadcrumbs" [ngClass]="{'is-active': breadcrumb.is_active}">
+              <a [routerLink]="['/'+ breadcrumb.url]">
                 {{breadcrumb.label}}
               </a>
             </li>
