--- a/src/app/modules/bills/pages/bills/bills.component.html
+++ b/src/app/modules/bills/pages/bills/bills.component.html
@@ -51,8 +51,8 @@
                                   <th>Bill No.</th>
                                   <th>Customer Name</th>
                                   <th>Payment Status</th>
-                                  <th>Amount</th>
-                                  <th>Date Time</th>
+                                  <th class="is-hidden-mobile">Amount</th>
+                                  <th class="is-hidden-mobile">Date Time</th>
                               </tr>
                           </thead>
                           <tbody>
@@ -60,57 +60,50 @@
                                   <td>19321001</td>
                                   <td>Aarti Gond</td>
                                   <td>Unpaid</td>
-                                  <td>40</td>
-                                  <td>21 Mar 2019 16:22:00</td>
+                                  <td class="is-hidden-mobile">40</td>
+                                  <td class="is-hidden-mobile">21 Mar 2019 16:22:00</td>
                               </tr>
                               <tr>
                                   <td>19321002</td>
                                   <td>Shrikant Gond</td>
                                   <td>Paid</td>
-                                  <td>20</td>
-                                  <td>21 Mar 2019 16:24:00</td>
+                                  <td class="is-hidden-mobile">20</td>
+                                  <td class="is-hidden-mobile">21 Mar 2019 16:24:00</td>
                               </tr>
                               <tr>
                                   <td>19321001</td>
                                   <td>Aarti Gond</td>
                                   <td>Unpaid</td>
-                                  <td>40</td>
-                                  <td>21 Mar 2019 16:22:00</td>
+                                  <td class="is-hidden-mobile">40</td>
+                                  <td class="is-hidden-mobile">21 Mar 2019 16:22:00</td>
                               </tr>
                               <tr>
                                   <td>19321001</td>
                                   <td>Aarti Gond</td>
                                   <td>Unpaid</td>
-                                  <td>40</td>
-                                  <td>21 Mar 2019 16:22:00</td>
+                                  <td class="is-hidden-mobile">40</td>
+                                  <td class="is-hidden-mobile">21 Mar 2019 16:22:00</td>
                               </tr>
                               <tr>
                                   <td>19321001</td>
                                   <td>Aarti Gond</td>
                                   <td>Unpaid</td>
-                                  <td>40</td>
-                                  <td>21 Mar 2019 16:22:00</td>
+                                  <td class="is-hidden-mobile">40</td>
+                                  <td class="is-hidden-mobile">21 Mar 2019 16:22:00</td>
                               </tr>
                               <tr>
                                   <td>19321001</td>
                                   <td>Aarti Gond</td>
                                   <td>Unpaid</td>
-                                  <td>40</td>
-                                  <td>21 Mar 2019 16:22:00</td>
+                                  <td class="is-hidden-mobile">40</td>
+                                  <td class="is-hidden-mobile">21 Mar 2019 16:22:00</td>
                               </tr>
                               <tr>
                                   <td>19321001</td>
                                   <td>Aarti Gond</td>
                                   <td>Unpaid</td>
-                                  <td>40</td>
-                                  <td>21 Mar 2019 16:22:00</td>
-                              </tr>
-                              <tr>
-                                  <td>19321001</td>
-                                  <td>Aarti Gond</td>
-                                  <td>Unpaid</td>
-                                  <td>40</td>
-                                  <td>21 Mar 2019 16:22:00</td>
+                                  <td class="is-hidden-mobile">40</td>
+                                  <td class="is-hidden-mobile">21 Mar 2019 16:22:00</td>
                               </tr>
 
                           </tbody>
