--- a/src/app/modules/customers/pages/customer-profile/customer-profile.component.html
+++ b/src/app/modules/customers/pages/customer-profile/customer-profile.component.html
@@ -39,7 +39,7 @@
             </div>
         </div>
       
-        <div class="card">
+        <div class="card" style="margin-top: 24px;">
             <div class="content" style="text-align:center">
       
                 <div class="columns is-mobile">
