--- a/src/app/modules/dashboard/pages/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/pages/dashboard/dashboard.component.html
@@ -1,10 +1,19 @@
 <div class="tabs">
   <ul>
-    <li class="is-active"><a>Pictures</a></li>
-    <li><a>Music</a></li>
-    <li><a>Videos</a></li>
-    <li><a>Documents</a></li>
+    <li class="is-active"><a>Today</a></li>
+    <li><a>This Week</a></li>
+    <li><a>This Month</a></li>    
   </ul>
+
+  <div class="field has-text-right" style="margin-right: 10px;">
+      <p class="control has-icons-left">
+          <input class="input is-rounded is-small" style="padding-left:2.5rem;" type="password"
+              placeholder="From Date">
+          <span class="icon is-small is-left">
+              <fa-icon icon="calendar-alt"></fa-icon>
+          </span>
+      </p>
+  </div>
 </div>
 
 <div style="margin-bottom: 16px;">
